# hotcrypto

./: .gitignore  README.md
benchmark/: .gitignore  fabfile.py  requirements.txt  settings.json
benchmark/Currency-results/: bench-0-22-25000-184.txt  bench-0-4-1000-184.txt
benchmark/HotStuff-results/: bench-0-4-1000-184.txt  bench-0-4-10000-184.txt
benchmark/Hotcrypto-parallel-results/: bench-0-4-1000-184-parallel.txt  bench-0-4-10000-184-parallel.txt  bench-0-4-25000-184-parallel.txt
benchmark/benchmark/: aggregate.py  commands.py  config.py  instance.py  local.py  logs.py  plot.py  remote.py  settings.py  utils.py
benchmark/benchmark_move/: aggregate.py  commands.py  instance.py  local.py  logs.py  plot.py  remote.py  utils.py
benchmark/plots/: latency-0-22-any-128-any.txt  latency-0-22-any-512-any.txt  latency-0-4-any-128-any.txt  latency-0-4-any-512-any.txt  robustness-0-22-x-128-any.txt  robustness-0-22-x-512-any.txt  robustness-0-4-x-128-any.txt  robustness-0-4-x-512-any.txt  tps-0-x-any-128-2000.txt  tps-0-x-any-128-5000.txt  tps-0-x-any-512-2000.txt  tps-0-x-any-512-5000.txt
benchmark/results/: bench-0-22-10000-128.txt  bench-0-4-1000-128.txt  bench-0-4-10000-128.txt  bench-0-4-25000-512.txt
benchmark/results_backup/: bench-0-22-1000-128.txt  bench-0-22-1000-512.txt  bench-0-22-10000-512.txt  bench-0-22-25000-128.txt  bench-0-22-25000-512.txt  bench-0-4-1000-512.txt  bench-0-4-10000-512.txt  bench-0-4-25000-128.txt
consensus/src/: core.rs
crypto/src/: lib.rs
node/: Cargo.toml
node/src/: client.rs  compiler.rs  config.rs  currency.move  currency.rs  main.rs  move.rs  node.rs  publish_script.move  transaction.rs  transaction_script.move  utils.rs
(+231 files in other folders)
