[package]
name = "node"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.1.0", features = ["time", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.6.2", features = ["codec"] }
log = "0.4.0"
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
clap = "2.33.3"
env_logger = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
rand = "0.7.3"
thiserror = "1.0.21"
anyhow = "1.0.38"
async-trait = "0.1.50"
ed25519-dalek = "1.0.1"
rayon = "1.5.1"

crypto = { path = "../crypto" }
store = { path = "../store" }
consensus = { path = "../consensus" }
mempool = { path = "../mempool" }
network = { path = "../network" }

## Diem benchmark dependencies
move-core-types = { path = "../move-main/language/move-core/types" }
move-vm-runtime = { path = "../move-main/language/move-vm/runtime" }
move-vm-types = { path = "../move-main/language/move-vm/types" }
move-vm-test-utils = { path = "../move-main/language/move-vm/test-utils" }
move-ir-compiler = { path = "../move-main/language/move-ir-compiler" }
move-binary-format = { path = "../move-main/language/move-binary-format" }
move-stdlib = { path = "../move-main/language/move-stdlib" }
move-compiler = { path = "../move-main/language/move-compiler" }
move-bytecode-verifier = { path = "../move-main/language/move-bytecode-verifier" }

[features]
benchmark = ["consensus/benchmark", "mempool/benchmark"]
parallel = []

[[bin]]         
name = "client"   
path = "src/client.rs" 
required-features = ["benchmark"] 
